#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([mysqlbinlogex], [0.1.2], [support@tapweb.co.jp])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src/mysqlbinlogex.cpp])
AC_CONFIG_HEADER([mysqlbinlogex_config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([unistd.h])
AC_CHECK_HEADERS([regex.h])
AC_CHECK_HEADERS([getopt.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_TYPE_SIZE_T
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_MKTIME
AC_FUNC_STAT
AC_CHECK_FUNCS([mkdir regcomp])

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
