bin_PROGRAMS=mysqlbinlogex mysqltxtlog
mysqlbinlogex_SOURCES=mysqlbinlogex.cpp mysqlbinlogex.h filemanage.cpp filemanage.h logparser.cpp logparser.h my_datetime.cpp my_datetime.h
mysqltxtlog_SOURCES=mysqltxtlog.cpp mysqltxtlog.h filemanage.cpp filemanage.h txtlogparser.cpp txtlogparser.h my_datetime.cpp my_datetime.h
